# 47service-optimizer

./: .env.example  .gitignore  NETLIFY_DEPLOYMENT.md  VERIFICATION_CHECKLIST.md  dev-server.err  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
admin-web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
admin-web/app/: globals.css  layout.tsx  page.tsx
admin-web/components/: AdminDashboard.tsx  LoginPanel.tsx
admin-web/lib/: backend.ts  clientApi.ts  session.ts  types.ts
admin-web/lib/server/: http.ts  licenseKeys.ts  licenseService.ts  prisma.ts  supportService.ts
prisma/: schema.prisma
prisma/migrations/20260601170000_postgresql_netlify_baseline/: migration.sql
server/src/: index.ts
server/src/config/: env.ts
server/src/lib/: database.ts  deviceHwid.ts
server/src/middleware/: adminAuth.ts  (+1 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  premium.rs
src/components/: BrandLogo.tsx  Dashboard.tsx  FeatureCard.tsx  LicenseGate.tsx  PremiumOverlay.tsx  PremiumSection.tsx  StatusPill.tsx  SupportTicketForm.tsx
src/data/: dashboardModules.ts  premiumModules.ts
src/lib/: apiBaseUrl.ts  desktopRuntime.ts  featureAccess.ts  licenseApi.ts  settingsStorage.ts  smartActions.ts  supportApi.ts
src/styles/: global.css
tests/: debug-help.mjs  debug-help2.mjs  stress-test.mjs
tests/results/: report.json  restore-ui-checks.json  restore-ui-settled-checks.json
(+28 files in other folders)
