[package]
name = "forty-seven-service"
version = "0.1.0"
description = "47Service desktop optimizer UI foundation"
authors = ["47Service"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
